--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <log4j.version>1.2.17</log4j.version>
         <junit.version>4.12</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <skip.unit.tests>false</skip.unit.tests>
     </properties>
 
     <profiles>
@@ -25,10 +26,40 @@
             </activation>
             <properties>
                 <build.profile.id>dev</build.profile.id>
+                <!--
+                    Only unit tests are run when the development profile is active
+                -->
                 <skip.integration.tests>true</skip.integration.tests>
                 <skip.unit.tests>false</skip.unit.tests>
             </properties>
+            <build>
+                <resources>
+                    <resource>
+                        <filtering>true</filtering>
+                        <directory>src/main/resources</directory>
+                    </resource>
+                </resources>
+                <testResources>
+                    <testResource>
+                        <directory>src/test/java</directory>
+                        <excludes>
+                            <exclude>**/*.java</exclude>
+                        </excludes>
+                    </testResource>
+                    <testResource>
+                        <directory>src/integration-test/java</directory>
+                        <excludes>
+                            <exclude>**/*.java</exclude>
+                        </excludes>
+                    </testResource>
+                    <testResource>
+                        <filtering>true</filtering>
+                        <directory>src/test/resources</directory>
+                    </testResource>
+                </testResources>
+            </build>
         </profile>
+
         <profile>
             <id>integration-test</id>
             <properties>
@@ -59,7 +90,6 @@
                         </executions>
                     </plugin>
 
-
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.12.4</version>
@@ -70,23 +100,15 @@
                                     <goal>test</goal>
                                 </goals>
                                 <configuration>
+                                    <skipTests>${skip.integration.tests}</skipTests>
                                     <excludes>
-                                        <exclude>**/*IncrementorTest</exclude>
+                                        <exclude>**/IncrementorTest.java</exclude>
                                     </excludes>
-                                    <includes>
-                                        <include>**/*IntegrationTest</include>
-                                    </includes>
                                 </configuration>
                             </execution>
                         </executions>
-
-                        <!--<configuration>-->
-                        <!--<skipTests>${skip.unit.tests}</skipTests>-->
-                        <!--<excludes>-->
-                        <!--<exclude>**/*IntegrationTest</exclude>-->
-                        <!--</excludes>-->
-                        <!--</configuration>-->
                     </plugin>
+
 
                     <!-- TODO: Разобораться с lifecycle
                     как сделано сейчас, не совсем правильно
@@ -184,14 +206,14 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
-            <!-- Integration tests -->
             <!-- exclude IntegrationTest from the default execution-->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.4</version>
                 <configuration>
+                    <skipTests>${skip.unit.tests}</skipTests>
                     <excludes>
-                        <exclude>**/*IntegrationTest</exclude>
+                        <exclude>**/*IntegrationTest*.java</exclude>
                     </excludes>
                 </configuration>
             </plugin>
